--- a/templates/item-create.html
+++ b/templates/item-create.html
@@ -1,4 +1,4 @@
-<form id="item-create" autocomplete="off" onsubmit="event.preventDefault();">
+<form class="item-create" autocomplete="off" onsubmit="event.preventDefault();">
     <div class="row">
         <label>Name</label>
         <input type="text" name="name"/>
@@ -7,9 +7,11 @@
     <div class="row">
         <label>Type</label>
         <select name="type">
-            <option value="Spell">Spell</option>
-            <option value="Weapon">Weapon</option>
+            <option value="Active Ability">Active Ability</option>
+            <option value="Passive Ability">Passive Ability</option>
             <option value="Consumable">Consumable</option>
+            <option value="Weapon">Weapon</option>
+            <option value="Miscellaneous">Miscellaneous</option>
         </select>
     </div>
 </form>
