--- a/templates/active-ability-sheet.html
+++ b/templates/active-ability-sheet.html
@@ -19,9 +19,9 @@
         </div>
 
         <div class="tab" data-group="primary" data-tab="attributes_tab">
-            <div class="mana-cost">
+            <div class="attribute">
                 <label>Mana Cost</label>
-                <input type="text" name="data.cost" value="{{data.cost}}" />
+                <input type="number" name="data.cost" value="{{data.cost}}" />
             </div>
             <div class="template">
                 <header class="header">
