--- a/templates/passive-ability-sheet.html
+++ b/templates/passive-ability-sheet.html
@@ -7,14 +7,14 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="tab_one">Tab One</a>
+        <a class="item" data-tab="description_tab">Description</a>
         <a class="item" data-tab="tab_two">Tab Two</a>
     </nav>
 
     {{!-- Sheet Body --}}
     <section class="sheet-body">
 
-        <div class="tab" data-group="primary" data-tab="tab_one">
+        <div class="tab" data-group="primary" data-tab="description_tab">
         </div>
 
         <div class="tab" data-group="primary" data-tab="tab_two">
