--- a/templates/passive-ability-sheet.html
+++ b/templates/passive-ability-sheet.html
@@ -8,16 +8,13 @@
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
         <a class="item" data-tab="description_tab">Description</a>
-        <a class="item" data-tab="tab_two">Tab Two</a>
     </nav>
 
     {{!-- Sheet Body --}}
     <section class="sheet-body">
 
         <div class="tab" data-group="primary" data-tab="description_tab">
-        </div>
-
-        <div class="tab" data-group="primary" data-tab="tab_two">
+            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
         </div>
 
     </section>
