Renamed templates to html

--- a/styles/5e.css
+++ b/styles/5e.css
@@ -286,6 +286,6 @@ form.item-create div.row {
     font-family: monospace;
 }
 
-.dnd .formula {
+.dnd input.formula {
     font-family: monospace;
 }
