Implemented critical attack hits, expertise for bard and rogue. Ready for session 1!

--- a/styles/5e.css
+++ b/styles/5e.css
@@ -115,6 +115,10 @@
     font-weight: bold;
 }
 
+.chat-template.item.crit .roll {
+    color: green;
+}
+
 div.dnd.system {
     color: #000000;
     background-color: rgba(100, 100, 100, 0.5);
